<resources>
    <string name="app_name">RTAB-Map</string>
    <string name="sys_name">RTAB-Map</string>
    <string name="menu_name">RTAB-Map</string>
    <string name="settings">Settings</string>
    <string name="sketchfab">Upload to Sketchfab&#8230;</string>
    <string name="status">"Status: "</string>
    <string name="words">"Words: "</string>
    <string name="camera_button">First View</string>
    <string name="library">Library</string>
    <string name="new_scan">New Scan</string>
    <string name="pause">Stop</string>
    <string name="resume">Start</string>
    <string name="backface_on">Backface</string>
    <string name="backface_off">Backface</string>
    <string name="light_on">Lighting</string>
    <string name="light_off">Lighting</string>
    <string name="wireframe">Wireframe</string>
    <string name="close_visualization">Close Visualization</string>
    <string name="save_to_file">Export OBJ/PLY&#8230;</string>
    <string name="share_to_sketchfab">Share to Sketchfab&#8230;</string>
    <string name="start">Start</string>
    <string name="nodes">"Nodes (WM): "</string>
    <string name="points">"Number of points: "</string>
    <string name="update_time">"Update time (ms): "</string>
    <string name="loop_closure">"Loop closure ID: "</string>
    <string name="free_memory">"Free Memory (MB): "</string>
    <string name="database_size">"Database (MB): "</string>
    <string name="total_loop">"Loop closures: "</string>
    <string name="inliers">"Inliers: "</string>
    <string name="features">"Features: "</string>
    <string name="rehearsal">"Rehearsal (%): "</string>
    <string name="polygons">"Polygons: "</string>
    <string name="memory">"Used Memory (MB): "</string>
    <string name="hypothesis">"Hypothesis (%): "</string>
    <string name="fps">"FPS (rendering): "</string>
    <string name="distance">"Distance travelled: "</string>
    <string name="gps">"GPS (long,lat,alt,bearing,err): "</string>
    <string name="env_sensors">"Sensors: "</string>
    <string name="time">"Time: "</string>
    <string name="pref_key_tags">pref_key_tags</string>
    <string name="pref_default_tags">rtabmap 3dscan tango</string>
    <string name="pref_key_rendering">pref_key_rendering</string>
    <string name="pref_default_rendering">2</string>
    <string name="pref_key_open_button">pref_key_open_button</string>
    <string name="pref_key_save_button">pref_key_save_button</string>
    <string name="pref_key_remove_button">pref_key_remove_button</string>
    <string name="pref_key_reset_button">pref_key_reset_button</string>
    <string name="pref_key_density">pref_key_density</string>
    <string name="pref_default_density">2</string>
    <string name="pref_key_min_depth">pref_key_min_depth</string>
    <string name="pref_default_min_depth">0</string>
    <string name="pref_key_depth">pref_key_depth</string>
    <string name="pref_default_depth">2.5</string>
    <string name="pref_key_point_size">pref_key_point_size</string>
    <string name="pref_default_point_size">10</string>
    <string name="pref_key_angle">pref_key_angle</string>
    <string name="pref_default_angle">20</string>
    <string name="pref_key_triangle">pref_key_triangle</string>
    <string name="pref_default_triangle">2</string>
    <string name="pref_key_rendering_texture_decimation">pref_key_rendering_texture_decimation</string>
    <string name="pref_default_rendering_texture_decimation">4</string>
    <string name="pref_key_blending">pref_key_blending</string>
    <string name="pref_default_blending">true</string>
    <string name="pref_key_background_color">pref_key_background_color</string>
    <string name="pref_default_background_color">0.2</string>
    <string name="pref_key_nodes_filtering">pref_key_nodes_filtering</string>
    <string name="pref_default_nodes_filtering">false</string>
    <string name="pref_key_append">pref_key_append</string>
    <string name="pref_default_append">true</string>
    <string name="pref_key_resolution">pref_key_resolution</string>
    <string name="pref_default_resolution">false</string>
    <string name="pref_key_smoothing">pref_key_smoothing</string>
    <string name="pref_default_smoothing">false</string>
    <string name="pref_key_depth_bleeding_error">pref_key_depth_bleeding_error</string>
    <string name="pref_default_depth_bleeding_error">0.0</string>
    <string name="pref_key_fisheye">pref_key_fisheye</string>
    <string name="pref_default_fisheye">false</string>
    <string name="pref_key_camera_driver">pref_key_camera_driver</string>
    <string name="pref_default_camera_driver">-1</string>
    <string name="pref_key_depth_from_motion">pref_key_depth_from_motion</string>
    <string name="pref_default_depth_from_motion">false</string>
    <string name="pref_key_arcore_relocalization_acc_thr">pref_key_arcore_relocalization_acc_thr</string>
    <string name="pref_default_arcore_relocalization_acc_thr">58.8399</string>
    <string name="pref_key_update_rate">pref_key_update_rate</string>
    <string name="pref_default_update_rate">1</string>
    <string name="pref_key_max_speed">pref_key_max_speed</string>
    <string name="pref_default_max_speed">0</string>
    <string name="pref_key_time_thr">pref_key_time_thr</string>
    <string name="pref_default_time_thr">0</string>
    <string name="pref_key_mem_thr">pref_key_mem_thr</string>
    <string name="pref_default_mem_thr">0</string>
    <string name="pref_key_loop_thr">pref_key_loop_thr</string>
    <string name="pref_default_loop_thr">0.11</string>
    <string name="pref_key_sim_thr">pref_key_sim_thr</string>
    <string name="pref_key_opt_error">pref_key_opt_error</string>
    <string name="pref_default_opt_error">2</string>
    <string name="pref_key_features">pref_key_features</string>
    <string name="pref_default_features">400</string>
    <string name="pref_key_cloud_voxel">pref_key_cloud_voxel</string>
    <string name="pref_default_cloud_voxel">0.01</string>
    <string name="pref_key_texture_size">pref_key_texture_size</string>
    <string name="pref_default_texture_size">4096</string>
    <string name="pref_key_normal_k">pref_key_normal_k</string>
    <string name="pref_default_normal_k">18</string>
    <string name="pref_key_block_render">pref_key_block_render</string>
    <string name="pref_default_block_render">false</string>
    <string name="pref_key_opt_depth">pref_key_opt_depth</string>
    <string name="pref_default_opt_depth">0</string>
    <string name="pref_key_opt_color_radius">pref_key_opt_color_radius</string>
    <string name="pref_default_opt_color_radius">0.05</string>
    <string name="pref_key_opt_clean_white">pref_key_opt_clean_white</string>
    <string name="pref_default_opt_clean_white">true</string>
    <string name="pref_key_gain_max_radius">pref_key_gain_max_radius</string>
    <string name="pref_default_gain_max_radius">0.02</string>
    <string name="pref_title_rendering">Rendering</string>
    <string name="pref_title_angle">Mesh Angle Tolerance</string>
    <string name="pref_summary_angle">Minimum polygon angle. Increase to force scanning perpendicular to surfaces.</string>
    <string name="pref_title_triangle">Mesh Triangle Size</string>
    <string name="pref_summary_triangle">Size in pixels of the polygons created from the depth image.</string>
    <string name="pref_title_depth">Max Depth</string>
    <string name="pref_summary_depth">Points over the maximum depth are not rendered.</string>
    <string name="pref_title_point_size">Point Size</string>
    <string name="pref_summary_point_size">Size of the points when rendering only the point cloud.</string>
    <string name="pref_title_nodes_filtering">Nodes Filtering</string>
    <string name="pref_summary_nodes_filtering">Render only the newest point cloud of a loop closure.</string>
    <string name="pref_title_mapping">Mapping</string>
    <string name="pref_summary_mapping">Advanced mapping parameters for fine tuning.</string>
    <string name="pref_title_append">Append Mode</string>
    <string name="pref_summary_append">When resuming mapping, wait for a relocalization on the current map before starting a new map.</string>
    <string name="pref_title_resolution">HD Mode</string>
    <string name="pref_summary_resolution">Save HD images of the color camera if you want very detailed textures. More memory will be required.</string>
    <string name="pref_title_update_rate">Update Rate</string>
    <string name="pref_summary_update_rate">Rate at which a new node is added to map.</string>
    <string name="pref_title_time_thr">Time Limit</string>
    <string name="pref_summary_time_thr">Maximum time allowed for map updates. If time to add a new node is above this theshold, some old parts of the map are temporarly forgotten to reduce time of next updates.</string>
    <string name="pref_title_loop_thr">Loop Closure Threshold</string>
    <string name="pref_summary_loop_thr">Threshold at which loop closure hypotheses are accepted. Higher means more robust to false loop closures while rejecting more good loop closures.</string>
    <string name="pref_title_opt_error">Max Optimization Error</string>
    <string name="pref_summary_opt_error">Reject any loop closures causing error corrections in the map higher than this factor of the link\'s variance.</string>
    <string name="pref_title_features">Max Features Extracted (Loop Closure)</string>
    <string name="pref_summary_features">Extracting more features per image would result in better loop closure transforms but more processing time is required.</string>
    <string name="pref_title_export">Assembling</string>
    <string name="pref_summary_export">Advanced parameters used when assembling the map.</string>
    <string name="pref_title_cloud_voxel">Voxel Size</string>
    <string name="pref_summary_cloud_voxel">If you don\'t need a very precise point cloud, you can set this to reduce the output point cloud size. This is also used for optimized mesh.</string>
    <string name="pref_title_texture_size">Texture Size</string>
    <string name="pref_summary_texture_size">If the map is large, you may want to increase this to maximize the texture resolution.</string>
    <string name="pref_title_normal_k">Normal K</string>
    <string name="pref_summary_normal_k">K-nearest neighbors used for normal computation when a mesh is created.</string>
    <string name="pref_title_block_render">Block Rendering Thread While Assembling</string>
    <string name="pref_summary_block_render">This decreases assembling time, but freezes rendering while assembling. This also clears temporary the rendered clouds/meshes from memory during assembling, this can be useful to avoid out of memory errors.</string>
    <string name="pref_title_optimized">Optimized</string>
    <string name="pref_title_opt_depth">Reconstruction Depth</string>
    <string name="pref_summary_opt_depth">Lowering this parameter decreases reconstruction time, but geometry precision is lower. Minimum polygon size: map length / 2^depth). \"Auto\" means that depth is chosen so that polygon size is just under 3 cm.</string>
    <string name="pref_title_opt_color_radius">Color Radius</string>
    <string name="pref_summary_opt_color_radius">Radius used to transfer nearest color from the point cloud to reconstructed mesh. When assembling with texture, if Clean Mesh is also enabled, this will limit the number of polygons textured in holes.</string>
    <string name="pref_title_opt_clean_white">Clean Mesh</string>
    <string name="pref_summary_opt_clean_white">Clean mesh from textureless or colorless reconstructed polygons.</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_gain_max_radius">Color Correction Radius</string>
    <string name="pref_summary_gain_max_radius">Radius used to find pixel correspondences for Adjust Colors optimization.</string>
    <string name="pref_title_reset_button">Restore All Default Settings</string>
</resources>